added TH2 histograms for sigma_xy and z correct units etc. Still waiting for overlay plotz

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,23 @@ Plots/ZPionMu.pdf
 Plots/ZPionSigma.pdf
 Plots/ZProtonMu.pdf
 Plots/ZProtonSigma.pdf
+Plots_LHC23k4g/XYErrPion.pdf
+Plots_LHC23k4g/XYErrPionTH2_0.pdf
+Plots_LHC23k4g/XYErrPionTH2_1.pdf
+Plots_LHC23k4g/XYErrPionTH2_2.pdf
+Plots_LHC23k4g/XYErrProton.pdf
+Plots_LHC23k4g/XYErrProtonTH2_0.pdf
+Plots_LHC23k4g/XYErrProtonTH2_1.pdf
+Plots_LHC23k4g/XYErrProtonTH2_2.pdf
+Plots_LHC23k4g/ZErrPion.pdf
+Plots_LHC23k4g/ZErrPionTH2_0.pdf
+Plots_LHC23k4g/ZErrPionTH2_1.pdf
+Plots_LHC23k4g/ZErrPionTH2_2.pdf
+Plots_LHC23k4g/ZErrProton.pdf
+Plots_LHC23k4g/ZErrProtonTH2_0.pdf
+Plots_LHC23k4g/ZErrProtonTH2_1.pdf
+Plots_LHC23k4g/ZErrProtonTH2_2.pdf
+Plots_LHC23k4g/ZPionMu.pdf
+Plots_LHC23k4g/ZPionSigma.pdf
+Plots_LHC23k4g/ZProtonMu.pdf
+Plots_LHC23k4g/ZProtonSigma.pdf
