--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ Plots_LHC23k4g/ZPionMu.pdf
 Plots_LHC23k4g/ZPionSigma.pdf
 Plots_LHC23k4g/ZProtonMu.pdf
 Plots_LHC23k4g/ZProtonSigma.pdf
+Plots_LHC23k4g/XPionSigma.pdf
+Plots_LHC23k4g/XProtonSigma.pdf
