added functionaltity to test cases for different pseudorapiditys and ne notebook for investigating the 7hits case

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,80 @@ Data/pion_rphi_4hits.txt
 Data/pion_z_4hits.txt
 Data/proton_rphi_4hits.txt
 Data/proton_z_4hits.txt
+Data/pion_rphi_7hits.txt
+Data/pion_z_7hits.txt
+Data/proton_rphi_7hits.txt
+Data/proton_z_7hits.txt
+Plots_LHC23k4g/IU.pdf
+Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta0.pdf
+Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta1.pdf
+Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta2.pdf
+Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta3.pdf
+Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta4.pdf
+Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta5.pdf
+Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta0.pdf
+Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta1.pdf
+Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta2.pdf
+Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta3.pdf
+Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta4.pdf
+Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta5.pdf
+Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta0.pdf
+Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta1.pdf
+Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta2.pdf
+Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta3.pdf
+Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta4.pdf
+Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta5.pdf
+Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta0.pdf
+Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta1.pdf
+Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta2.pdf
+Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta3.pdf
+Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta4.pdf
+Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta5.pdf
+Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta0.pdf
+Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta1.pdf
+Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta2.pdf
+Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta3.pdf
+Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta4.pdf
+Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta5.pdf
+Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta0.pdf
+Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta1.pdf
+Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta2.pdf
+Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta3.pdf
+Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta4.pdf
+Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta5.pdf
+Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta0.pdf
+Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta1.pdf
+Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta2.pdf
+Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta3.pdf
+Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta4.pdf
+Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta5.pdf
+Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta0.pdf
+Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta1.pdf
+Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta2.pdf
+Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta3.pdf
+Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta4.pdf
+Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta5.pdf
+Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta0.pdf
+Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta1.pdf
+Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta2.pdf
+Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta3.pdf
+Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta4.pdf
+Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta5.pdf
+Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta0.pdf
+Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta1.pdf
+Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta2.pdf
+Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta3.pdf
+Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta4.pdf
+Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta5.pdf
+Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta0.pdf
+Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta1.pdf
+Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta2.pdf
+Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta3.pdf
+Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta4.pdf
+Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta5.pdf
+Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta0.pdf
+Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta1.pdf
+Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta2.pdf
+Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta3.pdf
+Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta4.pdf
+Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta5.pdf
