--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,7 @@ Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta2.pdf
 Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta3.pdf
 Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta4.pdf
 Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta5.pdf
+Plots_LHC23k4g/XYErrPion7.pdf
+Plots_LHC23k4g/XYErrProton7.pdf
+Plots_LHC23k4g/ZErrPion7.pdf
+Plots_LHC23k4g/ZErrProton7.pdf
