--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,79 @@ Plots_LHC23k4g/XYErrPion7.pdf
 Plots_LHC23k4g/XYErrProton7.pdf
 Plots_LHC23k4g/ZErrPion7.pdf
 Plots_LHC23k4g/ZErrProton7.pdf
+Plots_LHC23k4g/XYErrPion7.png
+Plots_LHC23k4g/XYErrProton7.png
+Plots_LHC23k4g/ZErrPion7.png
+Plots_LHC23k4g/ZErrProton7.png
+Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta0.png
+Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta1.png
+Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta2.png
+Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta3.png
+Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta4.png
+Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta5.png
+Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta0.png
+Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta1.png
+Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta2.png
+Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta3.png
+Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta4.png
+Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta5.png
+Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta0.png
+Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta1.png
+Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta2.png
+Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta3.png
+Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta4.png
+Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta5.png
+Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta0.png
+Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta1.png
+Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta2.png
+Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta3.png
+Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta4.png
+Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta5.png
+Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta0.png
+Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta1.png
+Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta2.png
+Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta3.png
+Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta4.png
+Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta5.png
+Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta0.png
+Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta1.png
+Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta2.png
+Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta3.png
+Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta4.png
+Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta5.png
+Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta0.png
+Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta1.png
+Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta2.png
+Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta3.png
+Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta4.png
+Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta5.png
+Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta0.png
+Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta1.png
+Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta2.png
+Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta3.png
+Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta4.png
+Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta5.png
+Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta0.png
+Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta1.png
+Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta2.png
+Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta3.png
+Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta4.png
+Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta5.png
+Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta0.png
+Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta1.png
+Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta2.png
+Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta3.png
+Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta4.png
+Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta5.png
+Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta0.png
+Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta1.png
+Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta2.png
+Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta3.png
+Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta4.png
+Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta5.png
+Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta0.png
+Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta1.png
+Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta2.png
+Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta3.png
+Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta4.png
+Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta5.png
