fixed pseudorapidity cuts

--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,4 @@ Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta2.png
 Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta3.png
 Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta4.png
 Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta5.png
+Plots_LHC23k4g/Eta2.png
