--- a/.gitignore
+++ b/.gitignore
@@ -203,3 +203,15 @@ Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta3.png
 Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta4.png
 Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta5.png
 Plots_LHC23k4g/Eta2.png
+Plots_LHC23k4g_3D/XYErrPionTH2_0_eta0.png
+Plots_LHC23k4g_3D/XYErrPionTH2_1_eta0.png
+Plots_LHC23k4g_3D/XYErrPionTH2_2_eta0.png
+Plots_LHC23k4g_3D/XYErrProtonTH2_0_eta0.png
+Plots_LHC23k4g_3D/XYErrProtonTH2_1_eta0.png
+Plots_LHC23k4g_3D/XYErrProtonTH2_2_eta0.png
+Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta0_test.png
+Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta0_test.png
+Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta0_test.png
+Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta0_test.png
+Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta0_test.png
+Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta0_test.png
