new macro for eta dependence and fix for old plots with eta < 1

--- a/.gitignore
+++ b/.gitignore
@@ -215,3 +215,15 @@ Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta0_test.png
 Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta0_test.png
 Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta0_test.png
 Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta0_test.png
+Plots_LHC23k4g_3D/XYErrPionTH2_0.png
+Plots_LHC23k4g_3D/XYErrPionTH2_1.png
+Plots_LHC23k4g_3D/XYErrPionTH2_2.png
+Plots_LHC23k4g_3D/XYErrProtonTH2_0.png
+Plots_LHC23k4g_3D/XYErrProtonTH2_1.png
+Plots_LHC23k4g_3D/XYErrProtonTH2_2.png
+Plots_LHC23k4g_3D/ZErrPionTH2_0.png
+Plots_LHC23k4g_3D/ZErrPionTH2_1.png
+Plots_LHC23k4g_3D/ZErrPionTH2_2.png
+Plots_LHC23k4g_3D/ZErrProtonTH2_0.png
+Plots_LHC23k4g_3D/ZErrProtonTH2_1.png
+Plots_LHC23k4g_3D/ZErrProtonTH2_2.png
