--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,4 @@ Plots_LHC23k4g_3D/ZErrPionTH2_2.png
 Plots_LHC23k4g_3D/ZErrProtonTH2_0.png
 Plots_LHC23k4g_3D/ZErrProtonTH2_1.png
 Plots_LHC23k4g_3D/ZErrProtonTH2_2.png
+Plots_LHC23k4g/IU.png
