better eta dependence plots with small pT region

--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,35 @@ Plots_LHC23k4g_3D/ZErrProtonTH2_0.png
 Plots_LHC23k4g_3D/ZErrProtonTH2_1.png
 Plots_LHC23k4g_3D/ZErrProtonTH2_2.png
 Plots_LHC23k4g/IU.png
+DataEta/pion_rphi_4hits.txt
+DataEta/pion_z_4hits.txt
+DataEta/proton_rphi_4hits.txt
+DataEta/proton_z_4hits.txt
+Plots_LHC23k4g/pT.png
+Plots_LHC23k4g/pT0.png
+Plots_LHC23k4g/pT1.png
+Plots_LHC23k4g/pT2.png
+Plots_LHC23k4g_Eta2/XYErrPionTH2_0_pt.png
+Plots_LHC23k4g_Eta2/XYErrPionTH2_0.png
+Plots_LHC23k4g_Eta2/XYErrPionTH2_1_pt.png
+Plots_LHC23k4g_Eta2/XYErrPionTH2_1.png
+Plots_LHC23k4g_Eta2/XYErrPionTH2_2_pt.png
+Plots_LHC23k4g_Eta2/XYErrPionTH2_2.png
+Plots_LHC23k4g_Eta2/XYErrProtonTH2_0_pt.png
+Plots_LHC23k4g_Eta2/XYErrProtonTH2_0.png
+Plots_LHC23k4g_Eta2/XYErrProtonTH2_1_pt.png
+Plots_LHC23k4g_Eta2/XYErrProtonTH2_1.png
+Plots_LHC23k4g_Eta2/XYErrProtonTH2_2_pt.png
+Plots_LHC23k4g_Eta2/XYErrProtonTH2_2.png
+Plots_LHC23k4g_Eta2/ZErrPionTH2_0_pt.png
+Plots_LHC23k4g_Eta2/ZErrPionTH2_0.png
+Plots_LHC23k4g_Eta2/ZErrPionTH2_1_pt.png
+Plots_LHC23k4g_Eta2/ZErrPionTH2_1.png
+Plots_LHC23k4g_Eta2/ZErrPionTH2_2_pt.png
+Plots_LHC23k4g_Eta2/ZErrPionTH2_2.png
+Plots_LHC23k4g_Eta2/ZErrProtonTH2_0_pt.png
+Plots_LHC23k4g_Eta2/ZErrProtonTH2_0.png
+Plots_LHC23k4g_Eta2/ZErrProtonTH2_1_pt.png
+Plots_LHC23k4g_Eta2/ZErrProtonTH2_1.png
+Plots_LHC23k4g_Eta2/ZErrProtonTH2_2_pt.png
+Plots_LHC23k4g_Eta2/ZErrProtonTH2_2.png
