Overlay plots for eta dependence in 4 hit case

--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,15 @@ Plots_LHC23k4g_Eta2/ZErrProtonTH2_1_pt.png
 Plots_LHC23k4g_Eta2/ZErrProtonTH2_1.png
 Plots_LHC23k4g_Eta2/ZErrProtonTH2_2_pt.png
 Plots_LHC23k4g_Eta2/ZErrProtonTH2_2.png
+Plots_LHC23k4g_Overlay/XYErrPion_Rad0.png
+Plots_LHC23k4g_Overlay/XYErrPion_Rad1.png
+Plots_LHC23k4g_Overlay/XYErrPion_Rad2.png
+Plots_LHC23k4g_Overlay/XYErrProton_Rad0.png
+Plots_LHC23k4g_Overlay/XYErrProton_Rad1.png
+Plots_LHC23k4g_Overlay/XYErrProton_Rad2.png
+Plots_LHC23k4g_Overlay/ZErrPion_Rad0.png
+Plots_LHC23k4g_Overlay/ZErrPion_Rad1.png
+Plots_LHC23k4g_Overlay/ZErrPion_Rad2.png
+Plots_LHC23k4g_Overlay/ZErrProton_Rad0.png
+Plots_LHC23k4g_Overlay/ZErrProton_Rad1.png
+Plots_LHC23k4g_Overlay/ZErrProton_Rad2.png
