last commit was probalby for last Hiwi presentataion in the group meeting

--- a/.gitignore
+++ b/.gitignore
@@ -280,3 +280,25 @@ Plots_LHC23k4g_7hits/XYErrPion7.png
 Plots_LHC23k4g_7hits/XYErrProton7.png
 Plots_LHC23k4g_7hits/ZErrPion7.png
 Plots_LHC23k4g_7hits/ZErrProton7.png
+Data/pion_rphi_4hits_25cm.txt
+Data/pion_rphi_7hits_25.txt
+Data/pion_z_4hits_25cm.txt
+Data/pion_z_7hits_25.txt
+Data/proton_rphi_4hits_25cm.txt
+Data/proton_rphi_7hits_25.txt
+Data/proton_z_4hits_25cm.txt
+Data/proton_z_7hits_25.txt
+Plots_LHC23k4g_7hits/XYErrPion7_25.png
+Plots_LHC23k4g_7hits/XYErrProton7_25.png
+Plots_LHC23k4g_7hits/ZErrPion7_25.png
+Plots_LHC23k4g_7hits/ZErrProton7_25.png
+Plots_LHC23k4g_Talk/XYErrPionTH2_eta0.png
+Plots_LHC23k4g_Talk/XYErrProtonTH2_eta0.png
+Plots_LHC23k4g_Talk/ZErrPionTH2_0_eta0.png
+Plots_LHC23k4g_Talk/ZErrPionTH2_1_eta0.png
+Plots_LHC23k4g_Talk/ZErrPionTH2_2_eta0.png
+Plots_LHC23k4g_Talk/ZErrPionTH2_eta0.png
+Plots_LHC23k4g_Talk/ZErrProtonTH2_0_eta0.png
+Plots_LHC23k4g_Talk/ZErrProtonTH2_1_eta0.png
+Plots_LHC23k4g_Talk/ZErrProtonTH2_2_eta0.png
+Plots_LHC23k4g_Talk/ZErrProtonTH2_eta0.png
