updated gitignore to archive

--- a/.gitignore
+++ b/.gitignore
@@ -1,304 +1,6 @@
+.gitignore
+Plots/*
+Hiwi-Trees/*
+Data/*
+DataEta/*
 how_to_open_Root
-Plots/2DTestpion0.pdf
-Plots/2DTestpion1.pdf
-Plots/2DTestpion2.pdf
-Plots/2DTestproton0.pdf
-Plots/2DTestproton1.pdf
-Plots/2DTestproton2.pdf
-Plots/XErr.png
-Plots/XErrPion.pdf
-Plots/XErrProton.pdf
-Plots/XPionMu.pdf
-Plots/XPionSigma.pdf
-Plots/XProtonMu.pdf
-Plots/XProtonSigma.pdf
-Plots/ZErrPion.pdf
-Plots/ZErrProton.pdf
-Plots/ZPionMu.pdf
-Plots/ZPionSigma.pdf
-Plots/ZProtonMu.pdf
-Plots/ZProtonSigma.pdf
-Plots_LHC23k4g/XYErrPion.pdf
-Plots_LHC23k4g/XYErrPionTH2_0.pdf
-Plots_LHC23k4g/XYErrPionTH2_1.pdf
-Plots_LHC23k4g/XYErrPionTH2_2.pdf
-Plots_LHC23k4g/XYErrProton.pdf
-Plots_LHC23k4g/XYErrProtonTH2_0.pdf
-Plots_LHC23k4g/XYErrProtonTH2_1.pdf
-Plots_LHC23k4g/XYErrProtonTH2_2.pdf
-Plots_LHC23k4g/ZErrPion.pdf
-Plots_LHC23k4g/ZErrPionTH2_0.pdf
-Plots_LHC23k4g/ZErrPionTH2_1.pdf
-Plots_LHC23k4g/ZErrPionTH2_2.pdf
-Plots_LHC23k4g/ZErrProton.pdf
-Plots_LHC23k4g/ZErrProtonTH2_0.pdf
-Plots_LHC23k4g/ZErrProtonTH2_1.pdf
-Plots_LHC23k4g/ZErrProtonTH2_2.pdf
-Plots_LHC23k4g/ZPionMu.pdf
-Plots_LHC23k4g/ZPionSigma.pdf
-Plots_LHC23k4g/ZProtonMu.pdf
-Plots_LHC23k4g/ZProtonSigma.pdf
-Plots_LHC23k4g/XPionSigma.pdf
-Plots_LHC23k4g/XProtonSigma.pdf
-Plots_LHC23k4g/Eta.pdf
-Data/pion_rphi_4hits.txt
-Data/pion_z_4hits.txt
-Data/proton_rphi_4hits.txt
-Data/proton_z_4hits.txt
-Data/pion_rphi_7hits.txt
-Data/pion_z_7hits.txt
-Data/proton_rphi_7hits.txt
-Data/proton_z_7hits.txt
-Plots_LHC23k4g/IU.pdf
-Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta0.pdf
-Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta1.pdf
-Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta2.pdf
-Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta3.pdf
-Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta4.pdf
-Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta5.pdf
-Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta0.pdf
-Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta1.pdf
-Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta2.pdf
-Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta3.pdf
-Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta4.pdf
-Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta5.pdf
-Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta0.pdf
-Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta1.pdf
-Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta2.pdf
-Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta3.pdf
-Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta4.pdf
-Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta5.pdf
-Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta0.pdf
-Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta1.pdf
-Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta2.pdf
-Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta3.pdf
-Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta4.pdf
-Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta5.pdf
-Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta0.pdf
-Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta1.pdf
-Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta2.pdf
-Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta3.pdf
-Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta4.pdf
-Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta5.pdf
-Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta0.pdf
-Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta1.pdf
-Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta2.pdf
-Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta3.pdf
-Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta4.pdf
-Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta5.pdf
-Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta0.pdf
-Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta1.pdf
-Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta2.pdf
-Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta3.pdf
-Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta4.pdf
-Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta5.pdf
-Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta0.pdf
-Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta1.pdf
-Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta2.pdf
-Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta3.pdf
-Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta4.pdf
-Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta5.pdf
-Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta0.pdf
-Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta1.pdf
-Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta2.pdf
-Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta3.pdf
-Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta4.pdf
-Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta5.pdf
-Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta0.pdf
-Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta1.pdf
-Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta2.pdf
-Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta3.pdf
-Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta4.pdf
-Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta5.pdf
-Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta0.pdf
-Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta1.pdf
-Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta2.pdf
-Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta3.pdf
-Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta4.pdf
-Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta5.pdf
-Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta0.pdf
-Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta1.pdf
-Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta2.pdf
-Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta3.pdf
-Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta4.pdf
-Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta5.pdf
-Plots_LHC23k4g/XYErrPion7.pdf
-Plots_LHC23k4g/XYErrProton7.pdf
-Plots_LHC23k4g/ZErrPion7.pdf
-Plots_LHC23k4g/ZErrProton7.pdf
-Plots_LHC23k4g/XYErrPion7.png
-Plots_LHC23k4g/XYErrProton7.png
-Plots_LHC23k4g/ZErrPion7.png
-Plots_LHC23k4g/ZErrProton7.png
-Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta0.png
-Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta1.png
-Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta2.png
-Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta3.png
-Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta4.png
-Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta5.png
-Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta0.png
-Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta1.png
-Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta2.png
-Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta3.png
-Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta4.png
-Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta5.png
-Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta0.png
-Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta1.png
-Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta2.png
-Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta3.png
-Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta4.png
-Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta5.png
-Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta0.png
-Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta1.png
-Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta2.png
-Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta3.png
-Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta4.png
-Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta5.png
-Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta0.png
-Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta1.png
-Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta2.png
-Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta3.png
-Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta4.png
-Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta5.png
-Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta0.png
-Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta1.png
-Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta2.png
-Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta3.png
-Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta4.png
-Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta5.png
-Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta0.png
-Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta1.png
-Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta2.png
-Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta3.png
-Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta4.png
-Plots_LHC23k4g_Eta/ZErrPionTH2_0_eta5.png
-Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta0.png
-Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta1.png
-Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta2.png
-Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta3.png
-Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta4.png
-Plots_LHC23k4g_Eta/ZErrPionTH2_1_eta5.png
-Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta0.png
-Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta1.png
-Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta2.png
-Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta3.png
-Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta4.png
-Plots_LHC23k4g_Eta/ZErrPionTH2_2_eta5.png
-Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta0.png
-Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta1.png
-Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta2.png
-Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta3.png
-Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta4.png
-Plots_LHC23k4g_Eta/ZErrProtonTH2_0_eta5.png
-Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta0.png
-Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta1.png
-Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta2.png
-Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta3.png
-Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta4.png
-Plots_LHC23k4g_Eta/ZErrProtonTH2_1_eta5.png
-Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta0.png
-Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta1.png
-Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta2.png
-Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta3.png
-Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta4.png
-Plots_LHC23k4g_Eta/ZErrProtonTH2_2_eta5.png
-Plots_LHC23k4g/Eta2.png
-Plots_LHC23k4g_3D/XYErrPionTH2_0_eta0.png
-Plots_LHC23k4g_3D/XYErrPionTH2_1_eta0.png
-Plots_LHC23k4g_3D/XYErrPionTH2_2_eta0.png
-Plots_LHC23k4g_3D/XYErrProtonTH2_0_eta0.png
-Plots_LHC23k4g_3D/XYErrProtonTH2_1_eta0.png
-Plots_LHC23k4g_3D/XYErrProtonTH2_2_eta0.png
-Plots_LHC23k4g_Eta/XYErrPionTH2_0_eta0_test.png
-Plots_LHC23k4g_Eta/XYErrPionTH2_1_eta0_test.png
-Plots_LHC23k4g_Eta/XYErrPionTH2_2_eta0_test.png
-Plots_LHC23k4g_Eta/XYErrProtonTH2_0_eta0_test.png
-Plots_LHC23k4g_Eta/XYErrProtonTH2_1_eta0_test.png
-Plots_LHC23k4g_Eta/XYErrProtonTH2_2_eta0_test.png
-Plots_LHC23k4g_3D/XYErrPionTH2_0.png
-Plots_LHC23k4g_3D/XYErrPionTH2_1.png
-Plots_LHC23k4g_3D/XYErrPionTH2_2.png
-Plots_LHC23k4g_3D/XYErrProtonTH2_0.png
-Plots_LHC23k4g_3D/XYErrProtonTH2_1.png
-Plots_LHC23k4g_3D/XYErrProtonTH2_2.png
-Plots_LHC23k4g_3D/ZErrPionTH2_0.png
-Plots_LHC23k4g_3D/ZErrPionTH2_1.png
-Plots_LHC23k4g_3D/ZErrPionTH2_2.png
-Plots_LHC23k4g_3D/ZErrProtonTH2_0.png
-Plots_LHC23k4g_3D/ZErrProtonTH2_1.png
-Plots_LHC23k4g_3D/ZErrProtonTH2_2.png
-Plots_LHC23k4g/IU.png
-DataEta/pion_rphi_4hits.txt
-DataEta/pion_z_4hits.txt
-DataEta/proton_rphi_4hits.txt
-DataEta/proton_z_4hits.txt
-Plots_LHC23k4g/pT.png
-Plots_LHC23k4g/pT0.png
-Plots_LHC23k4g/pT1.png
-Plots_LHC23k4g/pT2.png
-Plots_LHC23k4g_Eta2/XYErrPionTH2_0_pt.png
-Plots_LHC23k4g_Eta2/XYErrPionTH2_0.png
-Plots_LHC23k4g_Eta2/XYErrPionTH2_1_pt.png
-Plots_LHC23k4g_Eta2/XYErrPionTH2_1.png
-Plots_LHC23k4g_Eta2/XYErrPionTH2_2_pt.png
-Plots_LHC23k4g_Eta2/XYErrPionTH2_2.png
-Plots_LHC23k4g_Eta2/XYErrProtonTH2_0_pt.png
-Plots_LHC23k4g_Eta2/XYErrProtonTH2_0.png
-Plots_LHC23k4g_Eta2/XYErrProtonTH2_1_pt.png
-Plots_LHC23k4g_Eta2/XYErrProtonTH2_1.png
-Plots_LHC23k4g_Eta2/XYErrProtonTH2_2_pt.png
-Plots_LHC23k4g_Eta2/XYErrProtonTH2_2.png
-Plots_LHC23k4g_Eta2/ZErrPionTH2_0_pt.png
-Plots_LHC23k4g_Eta2/ZErrPionTH2_0.png
-Plots_LHC23k4g_Eta2/ZErrPionTH2_1_pt.png
-Plots_LHC23k4g_Eta2/ZErrPionTH2_1.png
-Plots_LHC23k4g_Eta2/ZErrPionTH2_2_pt.png
-Plots_LHC23k4g_Eta2/ZErrPionTH2_2.png
-Plots_LHC23k4g_Eta2/ZErrProtonTH2_0_pt.png
-Plots_LHC23k4g_Eta2/ZErrProtonTH2_0.png
-Plots_LHC23k4g_Eta2/ZErrProtonTH2_1_pt.png
-Plots_LHC23k4g_Eta2/ZErrProtonTH2_1.png
-Plots_LHC23k4g_Eta2/ZErrProtonTH2_2_pt.png
-Plots_LHC23k4g_Eta2/ZErrProtonTH2_2.png
-Plots_LHC23k4g_Overlay/XYErrPion_Rad0.png
-Plots_LHC23k4g_Overlay/XYErrPion_Rad1.png
-Plots_LHC23k4g_Overlay/XYErrPion_Rad2.png
-Plots_LHC23k4g_Overlay/XYErrProton_Rad0.png
-Plots_LHC23k4g_Overlay/XYErrProton_Rad1.png
-Plots_LHC23k4g_Overlay/XYErrProton_Rad2.png
-Plots_LHC23k4g_Overlay/ZErrPion_Rad0.png
-Plots_LHC23k4g_Overlay/ZErrPion_Rad1.png
-Plots_LHC23k4g_Overlay/ZErrPion_Rad2.png
-Plots_LHC23k4g_Overlay/ZErrProton_Rad0.png
-Plots_LHC23k4g_Overlay/ZErrProton_Rad1.png
-Plots_LHC23k4g_Overlay/ZErrProton_Rad2.png
-Data/pion_rphi_4hits_1cm.txt
-Data/pion_z_4hits_1cm.txt
-Data/proton_rphi_4hits_1cm.txt
-Data/proton_z_4hits_1cm.txt
-Plots_LHC23k4g_7hits/XYErrPion7.png
-Plots_LHC23k4g_7hits/XYErrProton7.png
-Plots_LHC23k4g_7hits/ZErrPion7.png
-Plots_LHC23k4g_7hits/ZErrProton7.png
-Data/pion_rphi_4hits_25cm.txt
-Data/pion_rphi_7hits_25.txt
-Data/pion_z_4hits_25cm.txt
-Data/pion_z_7hits_25.txt
-Data/proton_rphi_4hits_25cm.txt
-Data/proton_rphi_7hits_25.txt
-Data/proton_z_4hits_25cm.txt
-Data/proton_z_7hits_25.txt
-Plots_LHC23k4g_7hits/XYErrPion7_25.png
-Plots_LHC23k4g_7hits/XYErrProton7_25.png
-Plots_LHC23k4g_7hits/ZErrPion7_25.png
-Plots_LHC23k4g_7hits/ZErrProton7_25.png
-Plots_LHC23k4g_Talk/XYErrPionTH2_eta0.png
-Plots_LHC23k4g_Talk/XYErrProtonTH2_eta0.png
-Plots_LHC23k4g_Talk/ZErrPionTH2_0_eta0.png
-Plots_LHC23k4g_Talk/ZErrPionTH2_1_eta0.png
-Plots_LHC23k4g_Talk/ZErrPionTH2_2_eta0.png
-Plots_LHC23k4g_Talk/ZErrPionTH2_eta0.png
-Plots_LHC23k4g_Talk/ZErrProtonTH2_0_eta0.png
-Plots_LHC23k4g_Talk/ZErrProtonTH2_1_eta0.png
-Plots_LHC23k4g_Talk/ZErrProtonTH2_2_eta0.png
-Plots_LHC23k4g_Talk/ZErrProtonTH2_eta0.png
